added basic pot plant

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,3 +1,11 @@
-{
-  "include": ["libs/*"]
+{    
+  "compilerOptions": {
+    "target": "es5",
+    "module": "commonjs"
+  },
+  "include": [
+    "*.js",
+    "libs/*",
+    "*/**/*.js",
+  ]
 }
